--- a/config/kip500-broker-node.properties
+++ b/config/kip500-broker-node.properties
@@ -45,10 +45,10 @@ advertised.listeners=PLAINTEXT://localhost:9092
 
 # Listener, host name, and port for the controller to advertise to the brokers. If 
 # this server is a controller, this listener must be configured.
-#controller.listener.names=PLAINTEXT
+controller.listener.names=CONTROLLER
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
-#listener.security.protocol.map=PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
+listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
 
 # The number of threads that the server uses for receiving requests from the network and sending responses to the network
 num.network.threads=3
